log
Wed Mar 24 13:58:49 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:32:21: error: expected expression before ‘)’ token
   List *list=(list *) malloc(sizeof(list));
                     ^
Compilation failed
Wed Mar 24 13:59:22 UTC 2021: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
66cfdcb
Thu Mar 25 13:21:55 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6d6047e
Thu Mar 25 21:12:52 UTC 2021: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
cd48c2b
